kubernetes/clustering-deployment.yaml
---
# Ref: https://aws.amazon.com/premiumsupport/knowledge-center/eks-kubernetes-services-cluster/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clustering-deployment
  labels:
    app: clustering
    rel: dev
    environment: local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clustering
  template:
    metadata:
      labels:
        app: clustering
    spec:
      containers:
      - name: clustering
        image: ewkoch3/base:cn_news_clusters
        imagePullPolicy: IfNotPresent
        resources:
              limits:
                memory: 512Mi
                cpu: 700m
              requests:
                memory: 256Mi
                cpu: 500m
        ports:
        - containerPort: 80
