kubernetes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: clustering-service-nodeport
spec:
  type: NodePort
  selector:
    app: clustering
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
