kubernetes/gateway.yaml
# Ref: https://semaphoreci.com/blog/continuous-blue-green-deployments-with-kubernetes
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: clustering-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
