kubernetes/route.yaml
# Ref: https://semaphoreci.com/blog/continuous-blue-green-deployments-with-kubernetes
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clustering-blue-green
spec:
  hosts:
  - "*"
  gateways:
  - clustering-gateway
  http:
  - name: clustering-default
    route:
    - destination:
        host: clustering
        subset: $COLOR_ACTIVE


---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: clustering-blue-green
spec:
  host: clustering
  subsets:
  - name: $COLOR_ACTIVE
    labels:
      color: $COLOR_ACTIVE
